--- a/chapter-01.tex
+++ b/chapter-01.tex
@@ -845,7 +845,7 @@ D_{AB} = p_{AB} - p_Ap_B
 \end{equation}
 and likewise for our other combinations at our two loci
 ($D_{Ab},~D_{aB},~D_{ab}$).
-% Gametes with two similar case alleles (e.g. A and B, or a and b) are known as \emph{coupling} gametes, and those with different case alleles are known as repulsion gametes (e.g. a and B, or A and b). Then, we can think of $D$ as measuring the \emph{excess} of coupling to repulsion gametes.
+Gametes with two similar case alleles (e.g. A and B, or a and b) are known as \emph{coupling} gametes, and those with different case alleles are known as repulsion gametes (e.g. a and B, or A and b). Then, we can think of $D$ as measuring the \emph{excess} of coupling to repulsion gametes.
 These $D$ statistics are all closely
 related to each other as $D_{AB} = - D_{Ab}$ and so on. Thus we only
 need to specify one $D_{AB}$ to know them all, so we'll drop the
