added Channel island fox diversity question

--- a/chapter-02.tex
+++ b/chapter-02.tex
@@ -383,7 +383,20 @@ estimate of $\mu$, then from setting $\pi = \widehat{\theta}_{\pi} = 4N\mu$ we c
 estimate of the population size $N$ that is consistent with our levels
 of neutral polymorphism.
 
-
+\begin{question}
+Robinson et al (Current Biology 2016) report $\pi$ for sample from
+populations of the California mainland gray fox and
+the San Nicolas Channel Island fox to be 0.0012 and 0.000014
+respectively. \\
+{\bf A)} How many sites do you expect to differ between two samples
+sequenced over a 100kb region in each of these populations?\\   
+{\bf B)} Assuming a mutation rate of $2\times 10^{-8}$ what
+effective population size do you estimate for these two populations?
+\\
+{\bf C)} Why is the effective population size of the Channel Island fox
+so low? [Hint: quickly google Channel island foxes to read up on their
+history, also to see how ridiculously cute they are.]
+\end{question}
 
 \subsection{The coalescent process of a sample of alleles.}
 
@@ -685,12 +698,7 @@ given that there are fewer rounds of replication in the female
 germline than in the male germline.
 \end{question}
 
-\begin{question}
-The gorilla lineage split from the human-chimp lineage $\sim$7 million years ago. Let’s assume that this speciation event occurred instantaneously in allopatry with no subsequent gene flow. \\
-{\bf A)}	What is the probability of that Gorilla is not an outgroup to human and chimp at a single locus?\\
-{\bf B)}	It has been estimated that the Gorilla lineage is not an outgroup at around ~30\% of autosomal loci. What effective population size would you need to assume to explain this observation? Is that only plausible explanation?\\
-{\bf C)}	The Gorilla lineage is an outgroup for large portions of the X chromosome, what is a plausible explanation for this finding?
-\end{question}
+
 
 
 \subsection{Neutral diversity and population structure}
@@ -773,6 +781,13 @@ linearly with $T$). It does so at a rate
 give by $T/(4N_e)$ so that differentiation will be higher
 between populations separated by long divergence times or with small
 effective population sizes.
+
+\begin{question}
+The gorilla lineage split from the human-chimp lineage $\sim$7 million years ago. Let’s assume that this speciation event occurred instantaneously in allopatry with no subsequent gene flow. \\
+{\bf A)}	What is the probability of that Gorilla is not an outgroup to human and chimp at a single locus?\\
+{\bf B)}	It has been estimated that the Gorilla lineage is not an outgroup at around ~30\% of autosomal loci. What effective population size would you need to assume to explain this observation? Is that only plausible explanation?\\
+{\bf C)}	The Gorilla lineage is an outgroup for large portions of the X chromosome, what is a plausible explanation for this finding?
+\end{question}
 
 \paragraph{A simple model of migration between an island and the mainland.}
 We can also use the coalescent to think about patterns of
